src/test/compile-fail/extfmt-missing-type.rs
// error-pattern:missing type

fn main() { #ifmt["%+"]; }
